force-app/main/default/objects/Assets__c/Assets__c.object-meta.xml
<CustomObject>
    <label>איש מקצוע</label>
    <nameField>
        <label>קוד איש מקצוע</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>אנשי מקצוע</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>