force-app/main/default/objects/Assets__c/fields/Asset_Address__c.field-meta.xml
<CustomField>
    <fullName>Asset_Address__c</fullName>
    <label>כתובת</label>
    <length>255</length>
    <type>Text</type>
</CustomField>