force-app/main/default/objects/Assets__c/fields/Asset_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Auto_Number__c</fullName>
    <displayFormat>A-{000000}</displayFormat>
    <label>Asset Auto Number</label>
    <type>AutoNumber</type>
</CustomField>