force-app/main/default/objects/Assets__c/fields/Asset_Cell_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Cell_Number__c</fullName>
    <label>נייד</label>
    <length>255</length>
    <type>Text</type>
</CustomField>