force-app/main/default/objects/Assets__c/fields/Asset_Continent__c.field-meta.xml
<CustomField>
    <fullName>Asset_Continent__c</fullName>
    <label>יבשת</label>
    <length>255</length>
    <type>Text</type>
</CustomField>