force-app/main/default/objects/Assets__c/fields/Asset_Notes__c.field-meta.xml
<CustomField>
    <fullName>Asset_Notes__c</fullName>
    <label>הערות</label>
    <length>255</length>
    <type>Text</type>
</CustomField>