force-app/main/default/objects/Assets__c/fields/Asset_Position__c.field-meta.xml
<CustomField>
    <fullName>Asset_Position__c</fullName>
    <label>תפקיד</label>
    <length>255</length>
    <type>Text</type>
</CustomField>