force-app/main/default/objects/Assets__c/fields/Asset_State__c.field-meta.xml
<CustomField>
    <fullName>Asset_State__c</fullName>
    <label>מדינה</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>אוגנדה</fullName>
            </value>
            <value>
                <fullName>אוזבקיסטן</fullName>
            </value>
            <value>
                <fullName>אוסטריה</fullName>
            </value>
            <value>
                <fullName>אוקראינה</fullName>
            </value>
            <value>
                <fullName>אורוגוואי</fullName>
            </value>
            <value>
                <fullName>אוריטניה</fullName>
            </value>
            <value>
                <fullName>אזרבייג&apos;ן</fullName>
            </value>
            <value>
                <fullName>אי הפסחא (צ&apos;ילה)</fullName>
            </value>
            <value>
                <fullName>איחוד האמירויות הערביות</fullName>
            </value>
            <value>
                <fullName>איטליה</fullName>
            </value>
            <value>
                <fullName>איי ג&apos;ורג&apos;יה</fullName>
            </value>
            <value>
                <fullName>איי מריאנה הצפוניים (ארצות הברית)</fullName>
            </value>
            <value>
                <fullName>איי מרשל</fullName>
            </value>
            <value>
                <fullName>איי סנדוויץ&apos;</fullName>
            </value>
            <value>
                <fullName>איי פוקלנד (הממלכה המאוחדת)</fullName>
            </value>
            <value>
                <fullName>איי פיטקרן (בריטניה)</fullName>
            </value>
            <value>
                <fullName>איי שלמה</fullName>
            </value>
            <value>
                <fullName>אינדונזיה</fullName>
            </value>
            <value>
                <fullName>איסלנד</fullName>
            </value>
            <value>
                <fullName>איראן</fullName>
            </value>
            <value>
                <fullName>אירלנד</fullName>
            </value>
            <value>
                <fullName>אלבניה</fullName>
            </value>
            <value>
                <fullName>אלג&apos;יריה</fullName>
            </value>
            <value>
                <fullName>אל סלוודור</fullName>
            </value>
            <value>
                <fullName>אלסקה</fullName>
            </value>
            <value>
                <fullName>אנגולה</fullName>
            </value>
            <value>
                <fullName>אנדורה</fullName>
            </value>
            <value>
                <fullName>אסטוניה</fullName>
            </value>
            <value>
                <fullName>אפגניסטן</fullName>
            </value>
            <value>
                <fullName>אקוודור</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>