force-app/main/default/objects/Assets__c/fields/Asset_Telephone_1__c.field-meta.xml
<CustomField>
    <fullName>Asset_Telephone_1__c</fullName>
    <label>טלפון 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>