force-app/main/default/objects/Assets__c/fields/Asset_Telephone_2__c.field-meta.xml
<CustomField>
    <fullName>Asset_Telephone_2__c</fullName>
    <label>טלפון 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>