force-app/main/default/objects/Assets__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <label>גורם / גוף</label>
    <length>255</length>
    <type>Text</type>
</CustomField>