force-app/main/default/objects/Assets__c/fields/Date_Added__c.field-meta.xml
<CustomField>
    <fullName>Date_Added__c</fullName>
    <label>תאריך הוספה</label>
    <type>Date</type>
</CustomField>