force-app/main/default/objects/Assets__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>אימייל</label>
    <type>Email</type>
</CustomField>