force-app/main/default/objects/Assets__c/fields/Last_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Last_Contacted__c</fullName>
    <label>קשר אחרון</label>
    <type>Date</type>
</CustomField>