force-app/main/default/objects/Assets__c/fields/Running_Number__c.field-meta.xml
<CustomField>
    <fullName>Running_Number__c</fullName>
    <displayFormat>A-{000000}</displayFormat>
    <label>Running Number</label>
    <type>AutoNumber</type>
</CustomField>