force-app/main/default/objects/Assets__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>סוג</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>אסטים</fullName>
            </value>
            <value>
                <fullName>ספקי ציוד</fullName>
            </value>
            <value>
                <fullName>צוות</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>