force-app/main/default/objects/Assets__c/fields/Type_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Service__c</fullName>
    <label>סוג שירות</label>
    <length>255</length>
    <type>Text</type>
</CustomField>