force-app/main/default/objects/Assets__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>אתר</label>
    <type>Url</type>
</CustomField>