force-app/main/default/objects/Assets__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Asset_Name__c</columns>
    <columns>Asset_State__c</columns>
    <columns>Asset_Cell_Number__c</columns>
    <columns>Email__c</columns>
    <columns>Asset_Position__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>